@@ -546,7 +546,6 @@ int cifs_close(struct inode *inode, struct file *file)
 			msleep(timeout);
 			timeout *= 8;
 		}
-		kfree(pSMBFile->search_resume_name);
 		kfree(file->private_data);
 		file->private_data = NULL;
 	} else
@@ -604,12 +603,6 @@ int cifs_closedir(struct inode *inode, struct file *file)
 				cifs_small_buf_release(ptmp);
 			else
 				cifs_buf_release(ptmp);
-		}
-		ptmp = pCFileStruct->search_resume_name;
-		if (ptmp) {
-			cFYI(1, ("closedir free resume name"));
-			pCFileStruct->search_resume_name = NULL;
-			kfree(ptmp);
 		}
 		kfree(file->private_data);
 		file->private_data = NULL;
